Added all portfolio links and photos

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
                         <a href="#portfolio-modal-1" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">Lemcy</a>
-                        <div class="cbp-l-grid-work-desc">Advanced Order Dining POC</div>
+                        <div class="cbp-l-grid-work-desc">Advanced Order Dining POC App</div>
                     </div><!--work item-->
 
                     <div class="cbp-item">
@@ -257,8 +257,8 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="#portfolio-modal-3" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">Giftastic</a>
-                        <div class="cbp-l-grid-work-desc">Giphy API App</div>
+                        <a href="#portfolio-modal-3" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">Talk To Me Goose</a>
+                        <div class="cbp-l-grid-work-desc">NYT Article Webscraper/Saver</div>
                     </div><!--work item-->
 
                     <div class="cbp-item">
@@ -271,8 +271,8 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="#portfolio-modal-4" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">LIRI</a>
-                        <div class="cbp-l-grid-work-desc">Spotify/Twitter/OMDB API App</div>
+                        <a href="#portfolio-modal-4" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">Train Scheduler</a>
+                        <div class="cbp-l-grid-work-desc">MomentJS/Local Storage Scheduler</div>
                     </div><!--work item-->
 
                     <div class="cbp-item">
@@ -299,8 +299,8 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="#portfolio-modal-6" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">Talk To Me Goose</a>
-                        <div class="cbp-l-grid-work-desc">NYT Article Webscraper/Saver</div>
+                        <a href="#portfolio-modal-6" class="cbp-l-grid-work-title cbp-singlePage" data-toggle="modal">EDM Trivia</a>
+                        <div class="cbp-l-grid-work-desc">Simple Trivia Game</div>
                     </div><!--work item-->
                 </div><!--grid end-->
 
@@ -323,7 +323,7 @@
                             </div>
                             <div class="portfolio-links-div">
                                     <a href="https://github.com/thomaszhang718/Lemcy" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="#" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="https://lemcy.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
@@ -345,11 +345,11 @@
                                 <img src="assets/images/portf-2.png" alt="" class="portfolio-img">
                             </div>
                             <div class="portfolio-desc-div">
-                                <p class="portfolio-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                <p class="portfolio-text">“Bet I’m Right” is an online version of social betting. Users propose a bet based on any topic (sports, film, television, etc.), and other users accept the bet by offering their answer. Judging for the correct answer to a bet is determined through either the admin team, a chosen third party, or by seeing what the community thinks is the correct answer. The winner of the bet gets to keep the loser's points. A database keeps track of points and win history, and are displayed for other users to see.</p>
                             </div>
                             <div class="portfolio-links-div">
                                     <a href="https://github.com/thomaszhang718/BetImRight" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="#" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="https://betimright.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
@@ -365,17 +365,17 @@
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="ion-close"></span></button>
                         </div>
                         <div class="modal-body">
-                            <h2 class="portfolio-title">Giftastic</h2>
+                            <h2 class="portfolio-title">Talk To Me Goose</h2>
                             <div class="center-border"></div>
                             <div class="portfolio-pic-div">
                                 <img src="assets/images/portf-3.png" alt="" class="portfolio-img">
                             </div>
                             <div class="portfolio-desc-div">
-                                <p class="portfolio-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                <p class="portfolio-text">TalkToMeGoose is an article webscrapper for the New York Times built on node and express. It pulls several articles from the front page displaying their title and description and saves it to a mongoDB database set up with MongooseJS. Notes can be saved for each article which are saved into the database for later review.</p>
                             </div>
                             <div class="portfolio-links-div">
-                                    <a href="https://github.com/thomaszhang718/Giftastic" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="#" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="https://github.com/thomaszhang718/TalkToMeGoose" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
+                                    <a href="https://talktomegoose.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
@@ -391,17 +391,17 @@
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="ion-close"></span></button>
                         </div>
                         <div class="modal-body">
-                            <h2 class="portfolio-title">LIRI</h2>
+                            <h2 class="portfolio-title">Train Scheduler</h2>
                             <div class="center-border"></div>
                             <div class="portfolio-pic-div">
                                 <img src="assets/images/portf-4.png" alt="" class="portfolio-img">
                             </div>
                             <div class="portfolio-desc-div">
-                                <p class="portfolio-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                <p class="portfolio-text">This app uses the browser's local storage and the MomentJS library to track the schedule of incoming trains. The schedule is custom created by the user by inputting the train name, starting time, and train interval. Next train time is automatically calculated using the current time and updated every minute. Train Scheduler was built with css, bootstrap, and momentJS.</p>
                             </div>
                             <div class="portfolio-links-div">
-                                    <a href="https://github.com/thomaszhang718/LIRI" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="#" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="https://github.com/thomaszhang718/TrainScheduler" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
+                                    <a href="https://trainscheduler-twz.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
@@ -423,11 +423,11 @@
                                 <img src="assets/images/portf-5.png" alt="" class="portfolio-img">
                             </div>
                             <div class="portfolio-desc-div">
-                                <p class="portfolio-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                <p class="portfolio-text">Danger Zone is designed to alert travelers of potential disease outbreaks waiting for them at their desired destination. Traveler inputs a destination and selects a disease from the dropdown menu to pull graphical information on the outbreaks in the country.</p>
                             </div>
                             <div class="portfolio-links-div">
                                     <a href="https://github.com/thomaszhang718/DangerZone" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="#" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="https://dangerzone-p1.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
@@ -443,25 +443,23 @@
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="ion-close"></span></button>
                         </div>
                         <div class="modal-body">
-                            <h2 class="portfolio-title">Talk To Me Goose</h2>
+                            <h2 class="portfolio-title">EDM Trivia</h2>
                             <div class="center-border"></div>
                             <div class="portfolio-pic-div">
                                 <img src="assets/images/portf-6.png" alt="" class="portfolio-img">
                             </div>
                             <div class="portfolio-desc-div">
-                                <p class="portfolio-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                <p class="portfolio-text">Simple trivia game about EDM (Electronic Dance Music). Topics cover recent news about the EDM industry, popular songs, hit DJs, and more. Built using HTML, CSS, Bootstrap, Javascript, jQuery.</p>
                             </div>
                             <div class="portfolio-links-div">
-                                    <a href="https://github.com/thomaszhang718/TalkToMeGoose" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="#" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="https://github.com/thomaszhang718/TriviaGame" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
+                                    <a href="https://edmtriviagame.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
                 </div><!--modal dialog-->
             </div>
             <!--end the modal-->
-
-
 
 
 
@@ -607,7 +605,7 @@
             //Code to scroll on anchor tag and not add to url
             $(document).ready(function(){
                 $(function() {
-                  $('a[href*="#"]:not([href="#"])').click(function() {
+                  $('a[href*="#contact"]:not([href="#"])').click(function() {
                     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
                       var target = $(this.hash);
                       target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
@@ -644,7 +642,7 @@
                     return false;
                 });
             });
-            
+
         </script>
     </body>
 </html>
