--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         <script src="assets/js/newsletter-custom.js" type="text/javascript"></script>  
         <script src="assets/js/scroll-reavel-custom.js"></script>
         <!-- Google Map Script -->
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDC4gWxwGtbafFo9HB7wgFVrfqyjGLtHYY&sensor=false"></script>
         <script src="assets/js/google-map.js"></script>
         <script src="assets/js/contact.js" type="text/javascript"></script>
         <!-- typed js-->
