fixing contact form

--- a/index.html
+++ b/index.html
@@ -503,18 +503,18 @@
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3 margin-b-30 scrollReveal sr-left">
                         <h4 class="text-uppercase margin-b-30">Say hello to me!</h4>
-                        <form method="post" action="email.php" id="contactForm" class="xone-contact">
+                        <form method="post" action="#" class="xone-contact">
                             <div class="row">
                                 <div class="col-sm-12">                                 
                                     <div class=" margin-b-20">
-                                        <input type="text" id="form_name" name="form_name" class="form-control" placeholder="Full Name...." />
+                                        <input type="text" name="name" class="form-control" placeholder="Full Name...." />
                                     </div>
                                     <div class=" margin-b-20">
-                                        <input type="text" id="form_email" name="form_email" class="form-control" placeholder="Email Address...." />
+                                        <input type="text" name="email" class="form-control" placeholder="Email Address...." />
                                     </div>                          
                                 </div>
                                 <div class="col-sm-12">
-                                    <textarea id="form_message" name="form_message" class="form-control margin-b-20" rows="5" placeholder="Message...."></textarea>                                  
+                                    <textarea name="message" class="form-control margin-b-20" rows="5" placeholder="Message...."></textarea>                                  
                                 </div>
                             </div>
                             <div class="row">
@@ -524,7 +524,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 text-center">
-                                    <button type="submit" id="submitContact" name="submit" class="btn btn-lg btn-skin-border btn-block margin-b-20">Send Message</button>
+                                    <button type="submit" name="submit" class="btn btn-lg btn-skin-border btn-block margin-b-20">Send Message</button>
                                 </div>
                             </div>
                         </form><!--form end-->
