fixing link for danger zone to http

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                             </div>
                             <div class="portfolio-links-div">
                                     <a href="https://github.com/thomaszhang718/DangerZone" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
-                                    <a href="https://dangerzone-p1.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
+                                    <a href="http://dangerzone-p1.herokuapp.com/" target="_blank" class="btn btn-default btn-lg"><i class="devicon-heroku-plain colored portfolio-icon"></i> <span class="network-name"> Heroku</span></a>
                             </div>
                         </div><!--modal body-->
                     </div><!--modal content-->
