--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                                 <img src="assets/images/portf-1.png" alt="" class="portfolio-img">
                             </div>
                             <div class="portfolio-desc-div">
-                                <p class="portfolio-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                <p class="portfolio-text">Lemcy is a proof of concept web application for advanced order dining, which allows users to make a reservation as well as order and pay for their food ahead of time. Lemcy is designed to speed up how restaurants can serve their customers, with a goal for restaurants to have drinks and appetizers within 5 minutes of seating. This also allows restaurants to see how many reservations they have and an approximation of meals they need to prepare.</p>
                             </div>
                             <div class="portfolio-links-div">
                                     <a href="https://github.com/thomaszhang718/Lemcy" target="_blank" class="btn btn-default btn-lg"><i class="devicon-github-plain-wordmark colored sportfolio-icon"></i></i> <span class="network-name"> Github</span></a>
@@ -480,7 +480,7 @@
             <div class=" parallax-text text-center center-it">
                 <h2>View My Resume To Learn More</h2>
 
-                <a href="https://drive.google.com/file/d/0B7WYaUz7YyKlV2lXZlFTUmpPaWM/view?usp=sharing" class="btn btn-default btn-lg" target="_blank"><i class="ion-android-document"></i> My Resume </a>
+                <a href="https://drive.google.com/file/d/0B7WYaUz7YyKleV9VRFNBdS15X00/view?usp=sharing" class="btn btn-default btn-lg" target="_blank"><i class="ion-android-document"></i> My Resume </a>
 
 
             </div>
